# qview

./: Cargo.toml  README.md  flake.nix
src/: app.rs  background_loader.rs  event.rs  main.rs  signal.rs  theme.rs  ui.rs
src/actions/: action.rs  mod.rs
src/gentoo/: mod.rs  package.rs  portage.rs  portage_loader.rs  useflags.rs
src/screens/: available_packages.rs  dashboard.rs  installed_packages.rs  mod.rs  screen.rs
src/widgets/: helpers.rs  mod.rs  package_metadata.rs  search_popup.rs  tabs.rs  use_flags.rs
